First version of llama2.java