@@ -78,7 +78,7 @@ You can specify whether vectorization is enabled or not with `-Dvector.matmul.en
 java -Dvector.matmul.enabled=true -Xmx40G --enable-preview --add-modules=jdk.incubator.vector Llama2 llama2_7b.bin -n 256 -i "New York is a city where"
 ```
 
-You can control matrix multiplication (matmul) parallelism with `-Djava.util.concurrent.ForkJoinPool.common.parallelism=X`. By default, it is set according to the number of cores per your machine's CPU specification. You can force using 16 threads to do matmul as shown below.
+You can control matrix multiplication (matmul) and multi-head attention (MHA) parallelism with `-Djava.util.concurrent.ForkJoinPool.common.parallelism=X`. By default, it is set according to the number of cores per your machine's CPU specification. You can force using 16 threads to do matmul and MHA as shown below.
 
 ```
 java -Djava.util.concurrent.ForkJoinPool.common.parallelism=16 -Xmx40G --enable-preview --add-modules=jdk.incubator.vector Llama2 llama2_7b.bin -n 256 -i "New York is a city where"
@@ -112,6 +112,14 @@ Java HotSpot(TM) 64-Bit Server VM (build 17.0.9+11-LTS-201, mixed mode, sharing)
 ```
 
 ### Compiling
+
+For llama2.c, `make run` executes `gcc -O3 -o run run.c -lm` by default, and `make runomp` executes `gcc -Ofast -fopenmp -march=native run.c -lm -o run` by default, the two different compile flags result in varied performance. So we test against both flags under single-threaded and multi-threaded scenarios.
+
+For, llama2.java, compile commands show as below.
+
+`javac --enable-preview -source 17 --add-modules=jdk.incubator.vector Llama2.java`.
+
+`javac --enable-preview -source 17 --add-modules=jdk.incubator.vector quantization/Llama2_q.java`.
 
 **Llama2.c**
 
@@ -151,33 +159,35 @@ java -Xmx40G -Djava.util.concurrent.ForkJoinPool.common.parallelism=8 --enable-p
 java -Xmx40G -Djava.util.concurrent.ForkJoinPool.common.parallelism=8 --enable-preview --add-modules=jdk.incubator.vector quantization.Llama2 llama2_7b_q80.bin -n 256 -i "New York is a city where"
 ```
 
+Note: set `-Djava.util.concurrent.ForkJoinPool.common.parallelism=0` to disable parallel execution of matmul and MHA.
+
 The test result is based on the highest tok/s achieved in 10 iterations.
 
 ### Single-threaded
 
-| Model                          | llama2.c  | llama2.java | llama2.java w/ vectorization |
-| :----------------------------- | :-------: | :---------: | :--------------------------: |
-| stories15M.bin                 | 55.394990 |  53.052519  |          137.657181          |
-| stories42M.bin                 | 19.951490 |  19.300636  |          52.359405           |
-| stories110M.bin                | 7.673327  |  7.420664   |          21.046771           |
-| llama2 7B                      | 0.126592  |  0.126839   |           0.383107           |
-| llama2 7B w/ int8 quantization | 0.363301  |  0.147977   |           0.159049           |
+| Model                          | llama2.c (-O3) |  llama2.c (-Ofast -march=native)  | llama2.java | llama2.java with vectorization |
+| :----------------------------- |:--------------:|:---------------------------------:|:-----------:|:------------------------------:|
+| stories15M.bin                 |   55.394990    |            148.192771             |  53.052519  |           137.657181           |
+| stories42M.bin                 |   19.951490    |             48.201989             |  19.300636  |           52.359405            |
+| stories110M.bin                |    7.673327    |             18.418202             |  7.420664   |           21.046771            |
+| llama2 7B                      |    0.126841    |             0.304579              |  0.126839   |            0.383107            |
+| llama2 7B w/ int8 quantization |    0.363301    |             0.241617              |  0.159049   |            0.147977            |
 
-### Multi-threaded
+### Multi-threaded (8 parallelism)
 
-| Model                          |  llama2.c  | llama2.java | llama2.java w/ vectorization |
-| :----------------------------- | :--------: | :---------: | :--------------------------: |
-| stories15M.bin                 | 651.041667 | 150.088287  |          191.154423          |
-| stories42M.bin                 | 196.791444 |  75.332349  |          93.126226           |
-| stories110M.bin                | 96.975516  |  37.804878  |          47.538200           |
-| llama2 7B                      |  1.837785  |  0.927539   |           1.747796           |
-| llama2 7B w/ int8 quantization |  3.110704  |  0.994283   |           1.005275           |
+| Model                          | llama2.c (-O3 -fopenmp) | llama2.c (-Ofast -fopenmp -march=native) | llama2.java | llama2.java with vectorization |
+| :----------------------------- |:-----------------------:|:----------------------------------------:|:-----------:|:------------------------------:|
+| stories15M.bin                 |       311.306902        |                651.041667                | 135.582011  |           176.104972           |
+| stories42M.bin                 |       126.874279        |                196.791444                |  72.289157  |           99.565217            |
+| stories110M.bin                |        51.567240        |                96.975516                 |  35.377358  |           52.110474            |
+| llama2 7B                      |        0.970784         |                 1.837785                 |  0.964149   |            1.939237            |
+| llama2 7B w/ int8 quantization |        2.378376         |                 3.110704                 |  1.064345   |            1.005275            |
 
-The benchmark results show that for single-threaded situation, llama2.java is very close to C version with little gap, because llama2.c is complied with `-O3` flag, llama2.java with vectorization enabled outperforms C version significantly.
+The benchmark results show that for single-threaded situation, llama2.java and llama2.c with `-03` flag is very close. If we compare llama2.java with explicit vectorization vs. llama2.c with `-Ofast -march=native` flag, Java implementation is less competitive with C in small sized models, but outperforms in llama2 7B model.
 
-On the other hand, for mutli-threaded comparison, llama2.c is more performant than llama.java in stories series baby model. However, when inferencing llama2 7B model, llama2.java with vectorization enabled is very close to C version, the multi-thread context switch of ForkJoin pool is likely to be the performance killer. Note that the C version is compiled with aggressive `-Ofast -march=native` flags turned out, this boosts llama.c performance .
+For mutli-threaded comparison, llama2.c is more performant than llama.java in stories series small sized models, the hypothesis is Java’s multi-thread context switch of ForkJoin pool is likely to be the performance killer as I can see from FlameGraph. As the model size increases, the gap is reduced because the per thread task is heavier (increased dimension, hidden_dim, layers, number of heads), so, when inferencing llama2 7B model, llama2.java is very close to llama2.c. If we run llama2.java with explicit vectorization enabled, it even outperforms llama2.c with aggressive `-Ofast -march=native` flag. On other observation is that matmul is compute intensive hot spot operation that takes most of the CPU resource and execution time, while Multi-Head Attention (MHA) inference does not gain much performance benefit through parallelism.
 
-Lastly, llama2.java int8 quantization implementation performs poorly compared to C version, it is because this requires dynamically quantize and dequantize between float32 and int8 at runtime, which adds overhead, this part is not able to benefit from parallelism and vectorization.
+Lastly, llama2.java int8 quantization implementation performs poorly compared to C version, it is because this requires dynamically quantize and dequantize between float32 and int8 at runtime, which adds overhead, this part is not able to benefit from parallelism nor vectorization.
 
 ## License
 
